grammar.js
        translation_unit: $ => optional(repeat1(
            $.external_declaration,
        )),

        /*
         * external_declaration :
         *   function_definition
         *   declaration
         *   SEMICOLON
         */
        function_definition: $ => seq(
            $.function_prototype,
            $.compound_statement_no_new_scope,
        ),

        /*
         * variable_identifier :
         *   IDENTIFIER
         *
         * primary_expression :
         *   variable_identifier
         *   INTCONSTANT
         *   UINTCONSTANT
         *   FLOATCONSTANT
         *   BOOLCONSTANT
         *   DOUBLECONSTANT
         *   LEFT_PAREN expression RIGHT_PAREN
         */
        _expression: $ => choice(
            $.primary_expression,
            $.function_call_expression,
            $.array_subscript_expression,
            $.field_select_expression,
            $.postfix_expression,
            $.prefix_expression,
            $.unary_expression,
            $.multiplicative_expression,
            $.additive_expression,
            $.shift_expression,
            $.relational_expression,
            $.equality_expression,
            $.and_expression,
            $.exclusive_or_expression,
            $.inclusive_or_expression,
            $.logical_and_expression,
            $.logical_xor_expression,
            $.logical_or_expression,
            $.conditional_expression,
            $.assignment_expression,
            $.sequence_expression,
        ),

        function_call_expression: $ => Expression.function_call($, $.function_call),
        postfix_expression: $ => Expression.postfix($, $._expression),
        equality_expression: $ => Expression.equality($, $._expression),
        function_call: $ => $.function_call_or_method,

        /*
         * function_call_or_method :
         *   function_call_generic
         */
        declaration: $ => choice(
            seq($.function_prototype, ';'),
            seq($.init_declarator_list, ';'),
            seq(
                'precision',
                $.precision_qualifier,
                $.type_specifier,
                ';',
            ),
            seq(
                $.type_qualifier,
                $.identifier,
                '{',
                $.struct_declaration_list,
                '}',
                optional(seq(
                    $.identifier,
                    optional($.array_specifier),
                )),
                ';',
            ),
            seq(
                $.type_qualifier,
                optional(seq(
                    $.identifier,
                    optional($.identifier_list),
                )),
                ';',
            ),
        ),

        /*
         * identifier_list :
         *   COMMA IDENTIFIER
         *   identifier_list COMMA IDENTIFIER
         */
        function_prototype: $ => seq(
            $.function_declarator,
            ')',
        ),

        /*
         * function_declarator :
         *   function_header
         *   function_header_with_parameters
         */
        parameter_declaration: $ => choice(
            seq(
                $.type_qualifier,
                choice(
                    $.parameter_declarator,
                    field('type', $.parameter_type_specifier),
                ),
            ),
            $.parameter_declarator,
            field('type', $.parameter_type_specifier),
        ),

        /*
         * parameter_type_specifier :
         *   type_specifier
         */
        init_declarator_list: $ => seq(
            field('type', $.fully_specified_type),
            optional(commaSeparated(field('variable', $.init_declarator))),
        ),

        init_declarator: $ => seq(
            field('name', $.identifier),
            optional($.array_specifier),
            optional(seq(
                '=',
                field('value', $.initializer),
            )),
        ),

        /*
         * fully_specified_type :
         *   type_specifier
         *   type_qualifier type_specifier
         */
        fully_specified_type: $ => seq(
            optional($.type_qualifier),
            $.type_specifier,
        ),

        /*
         * invariant_qualifier :
         *  INVARIANT
         */
        invariant_qualifier: $ => 'invariant',

        /*
         * interpolation_qualifier :
         *   SMOOTH
         *   FLAT
         *   NOPERSPECTIVE
         */
        interpolation_qualifier: $ => choice(
            'smooth',
            'flat',
            'noperspective',
        ),

        /*
         * layout_qualifier :
         *   LAYOUT LEFT_PAREN layout_qualifier_id_list RIGHT_PAREN
         *
         * layout_qualifier_id_list :
         *   layout_qualifier_id
         *   layout_qualifier_id_list COMMA layout_qualifier_id
         */
        layout_qualifier: $ => seq(
            'layout',
            '(',
            commaSeparated($.layout_qualifier_id),
            ')',
        ),

        /*
         * constant_expression :
         *   conditional_expression
         *
         * layout_qualifier_id :
         *   IDENTIFIER
         *   IDENTIFIER EQUAL constant_expression
         *   SHARED
         */
        layout_qualifier_id: $ => prec.right(1, choice(
            $.identifier,
            seq($.identifier, '=', $._expression),
        )),

        /*
         * precise_qualifier :
         *   PRECISE
         */
        precise_qualifier: $ => 'precise',

        /*
         * type_qualifier :
         *   single_type_qualifier
         *   type_qualifier single_type_qualifier
         */
        type_qualifier: $ => repeat1(
            $.single_type_qualifier
        ),

        /*
         * single_type_qualifier :
         *   storage_qualifier
         *   layout_qualifier
         *   precision_qualifier
         *   interpolation_qualifier
         *   invariant_qualifier
         *   precise_qualifier
         */
        storage_qualifier: $ => prec.right(choice(
            'attribute',
            'buffer',
            'centroid',
            'coherent',
            'const',
            'in',
            'inout',
            'out',
            'patch',
            'readonly',
            'restrict',
            'sample',
            'shared',
            'subroutine',
            'uniform',
            'varying',
            'volatile',
            'writeonly',
            seq(
                'subroutine',
                '(',
                $.type_name_list,
                ')',
            ),
        )),

        /*
         * type_name_list :
         *   TYPE_NAME
         *   type_name_list COMMA TYPE_NAME
         */
        type_specifier: $ => prec.left(seq(
            $.type_specifier_nonarray,
            optional($.array_specifier),
        )),

        /*
         * array_specifier :
         *   LEFT_BRACKET RIGHT_BRACKET
         *   LEFT_BRACKET conditional_expression RIGHT_BRACKET
         *   array_specifier LEFT_BRACKET RIGHT_BRACKET
         *   array_specifier LEFT_BRACKET conditional_expression RIGHT_BRACKET
         */
        array_specifier: $ => repeat1(seq(
            '[',
            optional($._expression),
            ']',
        )),

        /*
         * type_specifier_nonarray :
         *   basic_type
         *   struct_specifier
         *   TYPE_NAME
         */
        basic_type: $ => choice(...BASIC_TYPES),

        /*
         * precision_qualifier :
         *   HIGH_PRECISION
         *   MEDIUM_PRECISION
         *   LOW_PRECISION
         */
        precision_qualifier: () => choice(
            'highp',
            'mediump',
            'lowp',
        ),

        /*
         * struct_specifier :
         *   STRUCT IDENTIFIER LEFT_BRACE struct_declaration_list RIGHT_BRACE
         *   STRUCT LEFT_BRACE struct_declaration_list RIGHT_BRACE
         */
        struct_specifier: $ => seq(
            'struct',
            field('name', optional($.identifier)),
            '{',
            $.struct_declaration_list,
            '}',
        ),

        /*
         * struct_declaration_list :
         *   struct_declaration
         *   struct_declaration_list struct_declaration
         */
        struct_declaration: $ => seq(
            optional($.type_qualifier),
            $.type_specifier,
            $.struct_declarator_list,
            ';',
        ),

        /*
         * struct_declarator_list :
         *   struct_declarator
         *   struct_declarator_list COMMA struct_declarator
         */
        struct_declarator: $ => seq(
            $.identifier,
            optional($.array_specifier),
        ),

        /*
         * initializer_list :
         *   initializer
         *   initializer_list COMMA initializer
         *
         * initializer :
         *   assignment_expression
         *   LEFT_BRACE initializer_list RIGHT_BRACE
         *   LEFT_BRACE initializer_list COMMA RIGHT_BRACE
         */
        initializer: $ => choice(
            $._expression,
            $.array_initializer,
        ),
        declaration_statement: $ => $.declaration,

        /*
         * statement :
         *   compound_statement
         *   simple_statement
         */
        compound_statement: $ => seq(
            '{',
            optional($.statement_list),
            '}',
        ),

        /*
         * statement_no_new_scope :
         *   compound_statement_no_new_scope
         *   simple_statement
         */
        statement_no_new_scope: $ => choice(
            $.compound_statement_no_new_scope,
            $.simple_statement,
        ),

        /*
         * compound_statement_no_new_scope :
         *   LEFT_BRACE RIGHT_BRACE
         *   LEFT_BRACE statement_list RIGHT_BRACE
         */
        compound_statement_no_new_scope: $ => seq(
            '{',
            optional($.statement_list),
            '}',
        ),

        /*
         * statement_list :
         *   statement
         *   statement_list statement
         */
        expression_statement: $ => seq(
            optional($._expression),
            ';',
        ),

        /*
         * selection_statement :
         *   IF LEFT_PAREN expression RIGHT_PAREN selection_rest_statement
         */
        selection_statement: $ => seq(
            'if',
            '(',
            $._expression,
            ')',
            $.selection_rest_statement,
        ),

        /*
         * selection_rest_statement :
         *   statement ELSE statement
         *   statement
         */
        selection_rest_statement: $ => prec.right(choice(
            $.statement,
            seq($.statement, 'else', $.statement),
        )),

        /*
         * condition :
         *   expression
         *   fully_specified_type IDENTIFIER EQUAL initializer
         */
        condition: $ => choice(
            $._expression,
            seq(
                $.fully_specified_type,
                $.identifier,
                '=',
                $.initializer,
            ),
        ),

        /*
         * switch_statement_list :
         *   __NOTHING__ 
         *   statement_list
         *
         * switch_statement :
         *   SWITCH LEFT_PAREN expression RIGHT_PAREN LEFT_BRACE switch_statement_list RIGHT_BRACE
         */
        switch_statement: $ => seq(
            'switch',
            '(',
            $._expression,
            ')',
            '{',
            optional($.statement_list),
            '}',
        ),

        /*
         * case_label :
         *   CASE expression COLON
         *   DEFAULT COLON
         */
        case_label: $ => choice(
            seq('case', $._expression, ':'),
            seq('default', ':'),
        ),

        /*
         * iteration_statement :
         *   WHILE LEFT_PAREN condition RIGHT_PAREN statement_no_new_scope
         *   DO statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON
         *   FOR LEFT_PAREN for_init_statement for_rest_statement RIGHT_PAREN statement_no_new_scope
         */
        iteration_statement: $ => choice(
            seq(
                'while',
                '(',
                $.condition,
                ')',
                $.statement_no_new_scope,
            ),
            seq(
                'do',
                $.statement,
                'while',
                '(',
                $._expression,
                ')',
                ';',
            ),
            seq(
                'for',
                '(',
                $.for_init_statement,
                $.for_rest_statement,
                ')',
                $.statement_no_new_scope,
            ),
        ),

        /*
         * for_init_statement :
         *   expression_statement
         *   declaration_statement
         */
        for_init_statement: $ => choice(
            $.expression_statement,
            $.declaration_statement,
        ),

        /*
         * conditionopt :
         *   condition
         *   __EMPTY__
         *
         * for_rest_statement :
         *   conditionopt SEMICOLON
         *   conditionopt SEMICOLON expression
         */
        for_rest_statement: $ => seq(
            optional($.condition),
            ';',
            optional($._expression),
        ),

        /*
         * jump_statement :
         *   CONTINUE SEMICOLON
         *   BREAK SEMICOLON
         *   RETURN SEMICOLON
         *   RETURN expression SEMICOLON
         *   DISCARD SEMICOLON // Fragment shader only.
         */
        jump_statement: $ => seq(
            choice(
                'continue',
                'break',
                seq('return', optional($._expression)),
                'discard',
            ),
            ';',
        ),

        identifier: $ => choice(
            /[a-zA-Z_][a-zA-Z0-9_]*/,
            /[a-zA-Z_][a-zA-Z0-9_]*\\(\r|\n|\r\n)[a-zA-Z0-9_]+/,
        ),

        integer_constant: $ => choice(
            $.decimal_constant,
            $.octal_constant,
            $.hexadecimal_constant,
        ),
        decimal_constant: () => /[1-9][0-9]*[uU]?/,
        octal_constant: () => /0[0-7]*[uU]?/,
        hexadecimal_constant: () => /0[xX][0-9a-fA-F]+[uU]?/,

        /* BOOL */
        bool_constant: () => choice('true', 'false'),

        /*
         * https://www.khronos.org/registry/OpenGL/specs/gl/GLSLangSpec.4.60.html#floats
         *
         * floating_suffix : one of
         *   f F lf LF
         *
         * digit_sequence :
         *   digit
         *   digit_sequence digit
         *
         * sign :
         *   MINUS
         *   PLUS
         *
         * epxonent_part :
         *   e digit_sequence
         *   e sign digit_sequence
         *   E digit_sequence
         *   E sign digit_sequence
         *
         * fractional_constant :
         *   digit_sequence DOT digit_sequence
         *   digit_sequence DOT
         *   DOT digit_sequence
         *
         * floating_constant :
         *   fractional_constant
         *   fractional_constant exponent_part
         *   fractional_constant floating_suffix
         *   fractional_constant exponent_part floating_suffix
         *   digit_sequence exponent_part
         *   digit_sequence exponent_part floating_suffix
         */
        float_constant: () => token(seq(
            choice(
                /[0-9]+\.[0-9]+/,
                /\.[0-9]+/,
                /[0-9]+\./,
                /[0-9]+/,
            ),
            optional(/[eE][-+]?[0-9]+/),
            optional(choice('f', 'F', 'lf', 'LF')),
        )),

        // https://github.com/tree-sitter/tree-sitter-c/blob/88592f162e218e3d0de28f1e5d1835e6ef2c57b6/grammar.js#L966
